--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Fuzel</title>
     </head>
-    <body style="background-color:powderblue;">
+    <body>
 
         <table cellspacing="20">
             <tr>
